refactor!: Change dimensionAllowList and dimensionDenyList to be Set<ResourceLocation> now that Balm supports it